# TurboRPM

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile.turborpm  resources.qrc
docs/adr/: 0001-context-menu-for-table-view.md  0002-sudo-elevation-flow.md
src/: commands_plain.txt  main.cpp  mainwindow.cpp  mainwindow.h  packagemodel.cpp  packagemodel.h  qt_thread_test.cpp  qtworker.h
src/test/: qt_thread_test.cpp  qtworker.cpp
